improvement: visual tweaks for date interval selections

--- a/css/style.less
+++ b/css/style.less
@@ -2552,6 +2552,13 @@ fieldset {
 	}
 }
 
+.lms-ui-date-period-container {
+	white-space: nowrap;
+	> *:not(:last-child) {
+		padding-right: 0.5em;
+	}
+}
+
 .lms-ui-date-period-wrapper {
 	display: inline;
 	.lms-ui-button.lms-ui-button-date-period {
