--- a/templates/default/export.html
+++ b/templates/default/export.html
@@ -27,12 +27,22 @@
 					<TD width="1%">
 						<B>{trans("Period:")}&nbsp;</B>
 					</TD>
-					<TD style="width: 1%;" class="nobr">
-						{date_period_preset from="#invoicereport [name=\"from\"]" to="#invoicereport [name=\"to\"]"}
-						{trans("From")}&nbsp;<INPUT TYPE="text" NAME="from" SIZE="10" maxlength="10" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+					<TD style="width: 1%;">
+						<span class="lms-ui-date-period-container">
+							{date_period_preset from="#invoicereport [name=\"from\"]" to="#invoicereport [name=\"to\"]"}
+							<span>{trans("From")}</span>
+							<input type="text" name="from" size="10" maxlength="10"
+								placeholder="{trans("yyyy/mm/dd")}"
+								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+						</span>
 					</TD>
-					<TD style="width: 97%;" class="nobr">
-						{trans("To")}&nbsp;<INPUT TYPE="text" NAME="to" SIZE="10" maxlength="10" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+					<TD style="width: 97%;">
+						<span class="lms-ui-date-period-container">
+							<span>{trans("To")}</span>
+							<input type="text" name="to" size="10" maxlength="10"
+								placeholder="{trans("yyyy/mm/dd")}"
+								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+						</span>
 					</TD>
 				</TR>
 				<TR>
@@ -97,11 +107,19 @@
 					<TD width="1%">
 						<IMG src="img/calendar.gif" alt="">
 					</TD>
-					<TD width="1%" nowrap>
-						<B>{trans("Period:")}</B>&nbsp;
-						{date_period_preset from="#receiptlist [name=\"from\"]" to="#receiptlist [name=\"to\"]"}
-						{trans("From")}&nbsp;<INPUT TYPE="text" NAME="from" SIZE="10" maxlength="10" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
-						{trans("To")}&nbsp;<INPUT TYPE="text" NAME="to" SIZE="10" maxlength="10" placeholder="{trans("yyyy/mm/dd")}" {tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+					<TD width="1%">
+						<span class="lms-ui-date-period-container">
+							<strong>{trans("Period:")}</strong>
+							{date_period_preset from="#receiptlist [name=\"from\"]" to="#receiptlist [name=\"to\"]"}
+							<span>{trans("From")}</span>
+							<input type="text" name="from" size="10" maxlength="10"
+								placeholder="{trans("yyyy/mm/dd")}"
+								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+							<span>{trans("To")}</span>
+							<input type="text" name="to" size="10" maxlength="10"
+								placeholder="{trans("yyyy/mm/dd")}"
+								{tip class="lms-ui-date" text="Enter date in 'yyyy/mm/dd' format (empty field means current date) or click to choose it from calendar"}>
+						</span>
 					</TD>
 					<TD width="1%">
 						<IMG src="img/users.gif" alt="">
