--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -122,31 +122,33 @@
 						</SELECT>
 					</label>
 
-					<span class="nobr">
+					<span class="lms-ui-date-period-container">
 						{date_period_preset from="#documentlist [name=\"from\"]" to="#documentlist [name=\"to\"]"}
-                        {trans("from")}
-                        <INPUT TYPE="text" NAME="from" SIZE="10" maxlength="10" value="{if $filter.from > 0}{$filter.from|date_format:"%Y/%m/%d"}{/if}"
-								onChange="javascript:applyFilter();"
-								{tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
-					    {trans("to")}
-                        <INPUT TYPE="text" NAME="to" SIZE="10" maxlength="10" value="{if $filter.to > 0}{$filter.to|date_format:"%Y/%m/%d"}{/if}"
-								onChange="javascript:applyFilter();"
-								{tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
-                    </span>
+						<span>{trans("from")}</span>
+						<input type="text" name="from" size="10" maxlength="10"
+							value="{if $filter.from > 0}{$filter.from|date_format:"%Y/%m/%d"}{/if}"
+							onChange="javascript:applyFilter();"
+							{tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
+						<span>{trans("to")}</span>
+						<input type="text" name="to" size="10" maxlength="10"
+							value="{if $filter.to > 0}{$filter.to|date_format:"%Y/%m/%d"}{/if}"
+							onChange="javascript:applyFilter();"
+							{tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
+					</span>
 
 					{if !empty($numberplans) && count($numberplans)}
-					<label>
-						{trans("Number plan:")}
-						<SELECT name="p" onChange="javascript:applyFilter();" {tip text="Select numbering plan"}>
-							<OPTION value="0">- {trans("all")} -</OPTION>
-							{foreach $numberplans as $plan}
-							{$period = $plan.period}
-							<OPTION value="{$plan.id}"{if $filter.numberplan == $plan.id} selected{/if}>{number number=$plan.next template=$plan.template time=$invoice.cdate customerid=$filter.customer} ({$_NUM_PERIODS.$period})</OPTION>
-							{/foreach}
-						</SELECT>
-					</label>
+						<label>
+							{trans("Number plan:")}
+							<SELECT name="p" onChange="javascript:applyFilter();" {tip text="Select numbering plan"}>
+								<OPTION value="0">- {trans("all")} -</OPTION>
+								{foreach $numberplans as $plan}
+								{$period = $plan.period}
+								<OPTION value="{$plan.id}"{if $filter.numberplan == $plan.id} selected{/if}>{number number=$plan.next template=$plan.template time=$invoice.cdate customerid=$filter.customer} ({$_NUM_PERIODS.$period})</OPTION>
+								{/foreach}
+							</SELECT>
+						</label>
 					{else}
-					<input type="hidden" name="p" value="0">
+						<input type="hidden" name="p" value="0">
 					{/if}
 
 					<label>
