--- a/css/less/combobox.less
+++ b/css/less/combobox.less
@@ -23,7 +23,7 @@
  */
 
 .scombobox {
-  display: inline-flex;
+  display: inline-block;
   margin: 0;
   &-disabled .scombobox-display {
     cursor: no-drop;
