bugfix: visual fix

--- a/templates/default/customer/customerinfobox.html
+++ b/templates/default/customer/customerinfobox.html
@@ -67,7 +67,7 @@
 	</thead>
 	<tbody {if $customerpanel} id="customerpanel" style="display:none;"{/if}>
 		<tr>
-			<td colspan="2" class="container{if $customerpanel} text-right{/if}">
+			<td colspan="2" class="container">
 				<table width="100%" cellpadding="0">
 					<tr>
 						<td class="lmsbox-panels">
