bugfix: fixed change event handler assignment in customer assignment list period filter selection

--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -771,7 +771,7 @@
 		});
 		tab_elem.find('.assignment-type').change(updateAssignments).trigger('change');
 		tab_elem.find('.document').change(updateAssignments);
-		tab_elem.find('.period').change(updateAssignments);
+		tab_elem.find('.period-selection').change(updateAssignments);
 		tab_elem.find('.expired').change(updateAssignments);
 		tab_elem.find('.commited').change(updateAssignments);
 		tab_elem.find('.clear-filter').click(function() {
