--- a/css/style.less
+++ b/css/style.less
@@ -2271,8 +2271,7 @@ div.lms-ui-tab-container {
 				margin-left: 0.2em;
 			}
 			> i {
-				width: 1.3em;
-				text-align: center;
+				.fa-fw;
 				margin-right: 0.5em;
 			}
 			display: flex;
