improvement: modernized netnode info view

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -854,7 +854,8 @@
   }
 }
 
-.lms-ui-icon-checked {
+.lms-ui-icon-checked,
+.lms-ui-icon-check {
   .fa-icon;
   .fas;
   .lms-ui-icon;
@@ -1304,15 +1305,6 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-server;
-  }
-}
-
-.lms-ui-icon-add {
-  .fa-icon;
-  .fas;
-  .lms-ui-icon;
-  &:before {
-    content: @fa-var-plus-square;
   }
 }
 
@@ -1874,5 +1866,23 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-terminal;
+  }
+}
+
+.lms-ui-icon-area {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-square;
+  }
+}
+
+.lms-ui-icon-antenna {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-broadcast-tower;
   }
 }
